syntax = "proto3";
package matcha.view;

option go_package = "view";
option objc_class_prefix = "MatchaViewPb";
option java_package = "com.github.gomatcha.matcha.proto.view";
option java_outer_classname = "PbSlider";

message Slider {
    double value = 1;
    double maxValue = 2;
    double minValue = 3;
    bool enabled = 4;
}

message SliderEvent {
    double value = 1;
}
